--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -31,7 +31,7 @@ node(NODE_CONTEXT) {
         buildRust(rust)
 
         // test python wrapper
-        vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache -v vcx/libvcx/ci/scripts:/scripts')
+        vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
         testPythonWrapper(vcx_python)
 
         // create pip installable artifact
