--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -2,7 +2,7 @@
 
 def dockerfile= 'dockerfile'
 
-def TEST_MODE=false
+def TEST_MODE=true
 def NODE_CONTEXT='ubuntu'
 if (TEST_MODE) {
     NODE_CONTEXT='ubuntu-04'
@@ -24,8 +24,15 @@ node(NODE_CONTEXT) {
         libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
         rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
         scripts = build('scripts', 'vcx/ci/Dockerfile-scripts','vcx', '--no-cache')
+        
         // update the versions in the toml file and package.json
         updateVersions(rust)      
+
+        // test rust
+	    testRust(rust)
+            
+        // update the so file to have version
+        updateSo(rust)
         
         // build and test the so file
         buildRust(rust)
@@ -36,15 +43,6 @@ node(NODE_CONTEXT) {
 
         // create pip installable artifact
         createPtyhonArtifact(vcx_python)
-
-        if (!TEST_MODE) {
-            // test rust
-	        testRust(rust)
-            
-            // update the so file to have version
-            updateSo(rust)
-        }
-
         
         // test nodejs wrapper
         nodejs = build('nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs', 'vcx')
