--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -18,7 +18,7 @@ def build(name, file, context='.', customParams = '') {
 def getVcxVersion(envn){
     envn.inside {
         version = sh(
-            script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"../../libvcx/Cargo.toml\"))'"
+            script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"../../libvcx/Cargo.toml\"))'",
             returnStdout: true
         )
         return version
