--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -17,11 +17,13 @@ def build(name, file, context='.', customParams = '') {
 
 def getVcxVersion(envn){
     envn.inside {
-        version = sh(
-            script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"../../libvcx/Cargo.toml\"))'",
-            returnStdout: true
-        )
-        return version
+        dir ('ci/scripts') {
+            version = sh(
+                script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"../../libvcx/Cargo.toml\"))'",
+                returnStdout: true
+            )
+            return version
+        }
     }
 }
 
@@ -35,7 +37,13 @@ node(NODE_CONTEXT) {
         
         libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
         rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
-        scripts = build('scripts', 'vcx/ci/Dockerfile-scripts','vcx', '--no-cache')
+        if (TEST_MODE) {
+            scripts = build('scripts', 'vcx/ci/Dockerfile-scripts','vcx')
+        } else {
+            scripts = build('scripts', 'vcx/ci/Dockerfile-scripts','vcx', '--no-cache')
+        }
+        
+        
         
         // update the versions in the toml file and package.json
         updateVersions(rust)      
@@ -52,11 +60,16 @@ node(NODE_CONTEXT) {
         updateSo(rust)
         
         // test python wrapper
-        vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
-        VCX_VERSION = getVcxVersion(vcx_python)
+        if (TEST_MODE) {
+            vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx')
+        } else {
+            vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
+        }
+                
         testPythonWrapper(vcx_python)
 
         // create pip installable artifact
+        VCX_VERSION = getVcxVersion(vcx_python)
         createPtyhonArtifact(vcx_python, VCX_VERSION)
         
         if (!TEST_MODE){
