--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -16,7 +16,7 @@ def build(name, file, context='.', customParams = '') {
 }
 
 def getVcxVersion(envn){
-    envn.inside {
+    envn.inside('-w /vcx/ci/scripts') {
         dir ('ci/scripts') {
             version = sh(
                 script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"../../libvcx/Cargo.toml\"))'",
@@ -37,13 +37,8 @@ node(NODE_CONTEXT) {
         
         libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
         rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
-        if (TEST_MODE) {
-            scripts = build('scripts', 'vcx/ci/Dockerfile-scripts','vcx')
-        } else {
-            scripts = build('scripts', 'vcx/ci/Dockerfile-scripts','vcx', '--no-cache')
-        }
-        
-        
+       
+        scripts = build('scripts', 'vcx/ci/Dockerfile-scripts','vcx', '--no-cache')
         
         // update the versions in the toml file and package.json
         updateVersions(rust)      
@@ -60,12 +55,8 @@ node(NODE_CONTEXT) {
         updateSo(rust)
         
         // test python wrapper
-        if (TEST_MODE) {
-            vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx')
-        } else {
-            vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
-        }
-                
+        vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
+                    
         testPythonWrapper(vcx_python)
 
         // create pip installable artifact
