--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -19,7 +19,7 @@ def getVcxVersion(envn){
     envn.inside('-w /vcx/ci/scripts') {
         dir ('ci/scripts') {
             version = sh(
-                script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"../../libvcx/Cargo.toml\"))'",
+                script: "export PYTHONPATH=$PYTHONPATH:/vcx/ci/scripts; python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"../../libvcx/Cargo.toml\"))'",
                 returnStdout: true
             )
             return version
