--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -17,12 +17,14 @@ def build(name, file, context='.', customParams = '') {
 
 def getVcxVersion(envn){
     envn.inside('-w /vcx/ci/scripts') {
-        dir ('ci/scripts') {
-            version = sh(
-                script: "export PYTHONPATH=$PYTHONPATH:/vcx/ci/scripts; python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"../../libvcx/Cargo.toml\"))'",
-                returnStdout: true
-            )
-            return version
+        withEnv["PYTHONPATH=/vcx/ci/scripts"] {
+            dir ('ci/scripts') {
+                version = sh(
+                    script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"../../libvcx/Cargo.toml\"))'",
+                    returnStdout: true
+                )
+                return version
+            }
         }
     }
 }
