--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -35,7 +35,7 @@ node(NODE_CONTEXT) {
         }
 
         libvcx = build('libvcx', 'vcx/ci/Dockerfile-libvcx-test1', 'vcx')
-        vcx_python = build('python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper-test1')
+        vcx_python = build('python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper-test1', 'vcx')
         
         // create pip installable artifact
         VCX_VERSION = getVcxVersion(python)
