--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -28,19 +28,18 @@ def getVcxVersion(envn){
 }
 
 node(NODE_CONTEXT) {
-
     try {
         stage ('Checkout'){
             checkout scm
         }
-
-        libvcx = build('libvcx', 'vcx/ci/Dockerfile-libvcx-test1', 'vcx', '--no-cache')
-        vcx_python = build('python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper-test1', 'vcx', '--no-cache')
-        
-        // create pip installable artifact
-        VCX_VERSION = getVcxVersion(vcx_python)
-        sh "echo ${VCX_VERSION}"
-        createPtyhonArtifact(vcx_python, VCX_VERSION)
+            stage ('VCX-PYTHON testing') {
+            libvcx = build('libvcx', 'vcx/ci/Dockerfile-libvcx-test1', 'vcx', '--no-cache')
+            vcx_python = build('python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper-test1', 'vcx', '--no-cache')
+            // create pip installable artifact
+            VCX_VERSION = getVcxVersion(vcx_python)
+            sh "echo ${VCX_VERSION}"
+            createPtyhonArtifact(vcx_python, VCX_VERSION)
+        }
                         
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
