--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -19,7 +19,7 @@ def getVcxVersion(envn){
     sh 'ls -al'
     sh 'echo $PYTHONPATH'
     version = sh(
-        script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"vcx/libvcx/Cargo.toml\"))'",
+        script: "export PYTHONPATH=$PYTHONPATH:/scripts; python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"vcx/libvcx/Cargo.toml\"))'",
         returnStdout: true
     )
     return version
