--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -17,7 +17,8 @@ def build(name, file, context='.', customParams = '') {
 
 def getVcxVersion(envn){
     sh 'ls -al'
-    sh 'echo \$PYTHONPATH'
+    sh "echo \$PYTHONPATH"
+    sh 'ls /scripts'
     version = sh(
         script: "export PYTHONPATH=\$PYTHONPATH:/scripts; python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"vcx/libvcx/Cargo.toml\"))'",
         returnStdout: true
@@ -30,7 +31,7 @@ node(NODE_CONTEXT) {
         stage ('Checkout'){
             checkout scm
         }
-            stage ('VCX-PYTHON testing') {
+        stage ('VCX-PYTHON testing') {
             libvcx = build('libvcx', 'vcx/ci/Dockerfile-libvcx-test1', 'vcx')
             vcx_python = build('python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper-test1', 'vcx')
             // create pip installable artifact
