--- a/vcx/wrappers/python3/ci/Dockerfile-python-wrapper-test1
+++ b/vcx/wrappers/python3/ci/Dockerfile-python-wrapper-test1
@@ -9,13 +9,13 @@ RUN apt-get install -y python3-pip
 
 RUN pip3 install pytest qrcode pytest-asyncio
 
-
 RUN useradd -ms /bin/bash -u $uid vcx
+
+RUN mkdir -p /scripts
+COPY --chown vcx ci/scripts/ /scripts
+
 USER vcx
 
-RUN mkdir -p /scripts
-COPY ci/scripts/ /scripts
-
 ENV PYTHONPATH=$PYTHONPATH:/python3:/scripts
-RUN mkdir -p /scripts
-COPY ci/scripts/ /scripts
+
+
