--- a/vcx/wrappers/python3/ci/Dockerfile-python-wrapper-test1
+++ b/vcx/wrappers/python3/ci/Dockerfile-python-wrapper-test1
@@ -12,7 +12,9 @@ RUN pip3 install pytest qrcode pytest-asyncio
 RUN useradd -ms /bin/bash -u $uid vcx
 
 RUN mkdir -p /scripts
-COPY --chown=vcx ci/scripts/ /scripts
+COPY ci/scripts/ /scripts
+
+RUN chown vcx:vcx /scripts
 
 USER vcx
 
