--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -99,7 +99,7 @@ def createPtyhonArtifact(envn, version) {
         dir('vcx/wrappers/python3'){
             sh 'echo Building Python Artifact'
             environment {
-                VCX_VERSION = version
+                VCX_VERSION = "${version}"
             }
             envn.inside {
                 sh(
