Adding user to python dockerfile

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -98,15 +98,14 @@ def createPtyhonArtifact(envn, version) {
     stage ('Building Python Artifact') {
         dir('vcx/wrappers/python3'){
             sh 'echo Building Python Artifact'
-            environment {
-                VCX_VERSION = "${version}"
-            }
-            envn.inside {
-                sh(
-                    script: "python3 setup.py sdist",
-                    returnStdout: true
-                )
-                archiveArtifacts allowEmptyArchive: true, artifacts: 'dist/**/*.tar.gz'
+            withEnv(["VCX_VERSION=${version}"]) {
+                envn.inside {
+                    sh(
+                        script: "python3 setup.py sdist",
+                        returnStdout: true
+                    )
+                    archiveArtifacts allowEmptyArchive: true, artifacts: 'dist/**/*.tar.gz'
+                }
             }
         }
     }
