--- a/vcx/libvcx/Cargo.toml
+++ b/vcx/libvcx/Cargo.toml
@@ -29,6 +29,7 @@ libc = "0.2.21"
 rand = "0.3"
 serde = "1.0"
 serde_json = "1.0"
+json = "*"
 serde_derive = "1.0"
 config = "0.6"
 url = "1.5.1"
@@ -39,11 +40,13 @@ rmp = "0.8"
 rmp-serde = "0.13.7"
 base64 = "0.8.0"
 openssl = "0.10"
-rusqlite = { version = "0.13.0", features=["bundled"] }
+#rusqlite = { version = "0.13.0", features=["bundled"] }
+rusqlite = "0.13.0"
 num-traits = "0.2.0"
 
 [build-dependencies]
 serde = "1.0"
+json = "*"
 toml = "0.4"
 serde_json = "1.0"
 serde_derive = "1.0"
