--- a/vcx/ci/Dockerfile-libindy
+++ b/vcx/ci/Dockerfile-libindy
@@ -20,7 +20,7 @@ RUN apt-get update -y && apt-get install -y \
 RUN mkdir -p /libindy
 WORKDIR /libindy
 
-ENV LIBINDY_DEB=libindy_1.3.0_amd64.deb
+ENV LIBINDY_DEB=libindy_1.3.1~495_amd64.deb
 ENV LIBINDY_DOWNLOAD_URL=https://repo.sovrin.org/sdk/lib/apt/xenial/stable/$LIBINDY_DEB
 
 RUN curl -fsOSL $LIBINDY_DOWNLOAD_URL \
