--- a/vcx/ci/Dockerfile-libindy
+++ b/vcx/ci/Dockerfile-libindy
@@ -9,12 +9,27 @@ ARG uid=1000
 # Update environment
 # JRE installation and gcc
 RUN apt-get update -y && apt-get install -y \
+    gcc \
+    pkg-config \
     build-essential \
     libsodium-dev \
     libssl-dev \
     libgmp3-dev \
-    curl \
+    build-essential \
+    libsqlite3-dev \
     libsqlite0 \
+    cmake \
+    apt-transport-https \
+    ca-certificates \
+    debhelper \
+    wget \
+    git \
+    curl \
+	libffi-dev \
+    ruby \
+    ruby-dev \ 
+	sudo \
+    rubygems \
     libzmq5
 
 # Install libindy
