added feature called pool_tests to tests that depend on a pool. These tests will only be run when the --feature pool_tests flag is added to cargo test

--- a/vcx/libvcx/Cargo.toml
+++ b/vcx/libvcx/Cargo.toml
@@ -13,8 +13,8 @@ path = "src/lib.rs"
 crate-type = ["staticlib","rlib", "dylib"]
 
 [features]
-# no features by default
 default = []
+pool_tests = []
 
 # turn on release versioning
 ci = []
