Fixes after merge

--- a/vcx/libvcx/Cargo.toml
+++ b/vcx/libvcx/Cargo.toml
@@ -40,9 +40,13 @@ rmp = "0.8"
 rmp-serde = "0.13.7"
 base64 = "0.8.0"
 openssl = "0.10"
-#rusqlite = { version = "0.13.0", features=["bundled"] }
-rusqlite = "0.13.0"
+rusqlite = { version = "0.13.0", features=["bundled"] }
+#rusqlite = "0.13.0"
 num-traits = "0.2.0"
+log-panics = "2.0.0"
+
+[target.'cfg(target_os = "android")'.dependencies]
+android_logger = "0.5"
 
 [build-dependencies]
 serde = "1.0"
