[CO-1313, CO-1383] - Scripts for building the android libvcx.so on a mac and to fix the sudo of the sodium user and zmq user

--- a/vcx/libvcx/build_scripts/android/zmq/Dockerfile
+++ b/vcx/libvcx/build_scripts/android/zmq/Dockerfile
@@ -15,10 +15,12 @@ ENV ANDROID_NDK_ROOT /home/zeromq_user/android-ndk-r16b
 ENV TOOLCHAIN_DIR /home/zeromq_user/${target_arch}
 ENV PATH ${TOOLCHAIN_DIR}/bin:${PATH}
 
-RUN DEBIAN_FRONTEND=noninteractive apt-get -qq update -y && apt-get -qq install -y zip unzip autoconf cmake libtool pkg-config wget python3 2>&1 > /dev/null
-RUN useradd -m -d /home/zeromq_user -s /bin/bash zeromq_user && mkdir -p /etc/sudoers.d/
-RUN echo "zeromq_user ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/zeromq_user
-RUN chmod 0440 /etc/sudoers.d/zeromq_user
+RUN DEBIAN_FRONTEND=noninteractive apt-get -qq update -y && apt-get -qq install -y apt-utils zip unzip autoconf cmake libtool sudo pkg-config wget python3 2>&1 > /dev/null
+RUN useradd -m -d /home/zeromq_user -p $(openssl passwd -1 "zeromq") -s /bin/bash zeromq_user
+# && mkdir -p /etc/sudoers.d/
+RUN usermod -aG sudo zeromq_user
+#RUN echo "zeromq_user ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/zeromq_user
+#RUN chmod 0440 /etc/sudoers.d/zeromq_user
 
 USER zeromq_user
 WORKDIR /home/zeromq_user
