--- a/vcx/libvcx/build_scripts/android/zmq/Dockerfile
+++ b/vcx/libvcx/build_scripts/android/zmq/Dockerfile
@@ -10,7 +10,7 @@ ENV TARGET_ARCH ${target_arch}
 ENV TARGET_API ${target_api}
 ENV CROSS_COMPILE ${cross_compile}
 ENV ZMQ_HAVE_ANDROID 1
-ENV SODIUM_LIB_DIR ${sodium_lib_dir}
+ENV SODIUM_LIB_DIR /home/zeromq_user/${sodium_lib_dir}
 ENV ANDROID_NDK_ROOT /home/zeromq_user/android-ndk-r16b
 ENV TOOLCHAIN_DIR /home/zeromq_user/${target_arch}
 ENV PATH ${TOOLCHAIN_DIR}/bin:${PATH}
@@ -25,6 +25,7 @@ WORKDIR /home/zeromq_user
 
 COPY android-ndk-r16b-linux-x86_64.zip /home/zeromq_user/
 COPY zeromq-4.2.5.tar.gz /home/zeromq_user/
+COPY ${sodium_lib_dir}/ ${SODIUM_LIB_DIR}/
 RUN unzip -qq /home/zeromq_user/android-ndk-r16b-linux-x86_64.zip -d /home/zeromq_user/
 RUN tar xf /home/zeromq_user/zeromq-4.2.5.tar.gz -C /home/zeromq_user/
 RUN python3 ${ANDROID_NDK_ROOT}/build/tools/make_standalone_toolchain.py --arch ${target_arch} --api ${target_api} --install-dir ${TOOLCHAIN_DIR}
