--- a/vcx/wrappers/java/vcx/build.gradle
+++ b/vcx/wrappers/java/vcx/build.gradle
@@ -27,7 +27,7 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
-            abiFilters "armeabi-v7a"
+            abiFilters "x86"
         }
     }
 
